[tool.poetry]
name = "web-scraping-2509"
version = "0.1.0"
description = ""
authors = ["Alisa Chekalina <achekalina@nexialog.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
